--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,17 @@
 {
     "name": "CruzTec",
-    "short_name": "CruzTec",
+    "short_name": "CruzT",
     "theme_color": "#00A859",
     "background_color": "#FFFFFF",
     "display": "standalone",
-    "start_url": "index.html",
+    "start_url": "/#plano1",
     "scope": "/",
+    "lang": "pt-BR",
     "icons": [
       {
-        "src": "./assets/img/logo.svg",
+        "src": "/assets/img/logo-blue2.png",
         "sizes": "512x512",
-        "type": "image/svg"
+        "type": "image/png"
       }
     ]
   }
