--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "theme_color": "#00A859",
     "background_color": "#FFFFFF",
     "display": "standalone",
-    "start_url": "/#plano1",
+    "start_url": "/?teste",
     "scope": "/",
     "lang": "pt-BR",
     "icons": [
