--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "lang": "pt-BR",
     "icons": [
       {
-        "src": "/assets/img/logo-blue2.png",
+        "src": "./assets/img/logo-blue2.png",
         "sizes": "512x512",
         "type": "image/png"
       }
